2008-10-31  Christian Dywan  <christian@imendio.com>

	Bug 347230 – testicontheme shortcomings

	* tests/testicontheme.c (main):
	Use theme for "display" and quit on window closing

2008-10-30  Matthias Clasen  <mclasen@redhat.com>

	Bug 558522 – scroll arrow painted insensitive even though there
	are pages beyond the edge

	* gtk/gtknotebook.c (gtk_notebook_real_insert_page): Redraw
	arrows. Pointed out by Christian Persch

2008-10-30  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkcellrenderertext.h
	* gtk/gtkentry.[ch]
	* gtk/gtkimcontext.h
	* gtk/gtklabel.c
	* gtk/gtkstyle.h: <pango/pango.h> is pulled in by <gdk/gdk.h>,
	remove its inclusion here.

2008-10-30  Michael Natterer  <mitch@imendio.com>

	* gtk/*.h: no need to include <gtk/gtkenums.h> in headers which
	somehow include gtkobject.h or another header which includes it.

2008-10-30  Marek Kasik  <mkasik@redhat.com>

	Bug 339714 - Set printer dpi on cairo ps/pdf surfaces when printing

	* gtk/gtk.symbols
	* gtk/gtkprintsettings.c
	* gtk/gtkprintsettings.h
	* docs/reference/gtk/gtk-sections.txt
	* modules/printbackends/file/gtkprintbackendfile.c
	* modules/printbackends/test/gtkprintbackendtest.c
	* modules/printbackends/cups/gtkprintbackendcups.c
	* modules/printbackends/lpr/gtkprintbackendlpr.c:
	Added lpi (lines per inch) setting to GtkPrintSettings and support
	for anamorphic dpi. Surface fallback resolution is set to 2*lpi.

2008-10-30  Michael Natterer  <mitch@imendio.com>

	* gtk/*.h: no need to include <gdk/gdk.h> in any widget header,
	it's included via gtkwidget.h anyway.

2008-10-30  Sven Neumann  <sven@gimp.org>

	* gtk/gtkwidget.c (gtk_widget_get_property): removed redundant
	conditional.

2008-10-30  Christian Dywan  <christian@imendio.com>

	Bug 557316 – GtkLinkButton should consider user-defined tooltip

	* gtk/gtklinkbutton.c (gtk_link_button_query_tooltip_cb):
	Only override the tooltip if not previously set

2008-10-29  Christian Dywan  <christian@imendio.com>
